--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 .container{
   width: 100%;
   height: 50%;
-  border: 1px soild red;
+  margin-top: 10px
   /* display:flex;
   justify-content: space-between; */
 }
